# app/Http/Controllers/GroupController.php
@@ -5,23 +5,50 @@ namespace App\Http\Controllers;
 use App\Contracts\ErrorResponseContract;
 use App\Contracts\FindByCodeContract;
 use App\Contracts\ResponeContract;
+use App\Http\Requests\DepartmentFormRequest;
 use App\Http\Requests\GroupFormRequest;
 use App\Models\Department;
 use App\Models\Group;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Support\Facades\Validator;
+use OpenApi\Annotations as OA;
 
 class GroupController extends Controller
 {
-    private $val;
 
+    /**
+     * @OA\Post(
+     *     path="/api/Group",
+     *     description="Создать группу",
+     *     tags={"Group"},
+     *     @OA\RequestBody(
+     *          description="Тело запроса для создания группы",
+     *          required=true,
+     *          @OA\JsonContent(
+     *              required={"name", "department_id", "start_year", "end_year"},
+     *              @OA\Property(property="name", type="string", example="К-20-19", description="Название группы"),
+     *              @OA\Property(property="department_id", type="integer", example="1", description="ID отделения"),
+     *              @OA\Property(property="start_year", type="integer", example="2018", maxLength=4, minLength=4, description="Год поступления"),
+     *              @OA\Property(property="end_year", type="integer", example="2022", maxLength=4, minLength=4, description="Год выпуска"),
+     *          )
+     *     ),
+     *     @OA\Response(
+     *          response="200",
+     *          description="Группа создана",
+     *          @OA\JsonContent(ref="#/components/schemas/SuccessRespone")
+     *     ),
+     *     @OA\Response(
+     *          response="422",
+     *          description="Валидация не пройдена",
+     *          @OA\JsonContent(
+     *              ref="#/components/schemas/ErrorResponse",
+                )
+     *     )
+     * )
+     */
     public function createGroup (GroupFormRequest $req): JsonResponse
     {
         $request = $req->validated();
-
-        if (!$this->isValidYears($request)) {
-            return $this->sendError('Ошибка валидации', 'Проверьте правильность заполнения полей', $this->val, 422);
-        }
 
         Group::create([
             'name' => $request['name'],
@@ -33,6 +60,33 @@ class GroupController extends Controller
         return $this->sendResp('Успешно', 'Группа была успешно добавлена', 200);
     }
 
+    /**
+     * @OA\Delete(
+     *     path="/api/Group",
+     *     description="Удалить группу",
+     *     tags={"Group"},
+     *     @OA\RequestBody(
+     *          description="Тело запроса для создания группы",
+     *          required=true,
+     *          @OA\JsonContent(
+     *              required={"id"},
+     *              @OA\Property(property="id", type="integer", example="1", description="ID группы"),
+     *          )
+     *     ),
+     *     @OA\Response(
+     *          response="200",
+     *          description="Группа удалена",
+     *          @OA\JsonContent(ref="#/components/schemas/SuccessRespone")
+     *     ),
+     *     @OA\Response(
+     *          response="422",
+     *          description="Валидация не пройдена",
+     *          @OA\JsonContent(
+     *              ref="#/components/schemas/ErrorResponse",
+    )
+     *     )
+     * )
+     */
     public function deleteGroup (GroupFormRequest $req) :JsonResponse
     {
         $request = $req->validated();
@@ -43,13 +97,40 @@ class GroupController extends Controller
         return $this->sendResp('Успешно', 'Группа была успешно удалена', 200);
     }
 
+    /**
+     * @OA\Patch(
+     *     path="/api/Group",
+     *     description="Отредактировать группу",
+     *     tags={"Group"},
+     *     @OA\RequestBody(
+     *          description="Тело запроса для редактирования группы",
+     *          required=true,
+     *          @OA\JsonContent(
+     *              required={"id"},
+     *              @OA\Property(property="id", type="integer", example="1", description="ID группы"),
+     *              @OA\Property(property="name", type="string", example="К-20-19", description="Название группы"),
+     *              @OA\Property(property="department_id", type="integer", example="1", description="ID отделения"),
+     *              @OA\Property(property="start_year", type="integer", example="2018", maxLength=4, minLength=4, description="Год поступления"),
+     *              @OA\Property(property="end_year", type="integer", example="2022", maxLength=4, minLength=4, description="Год выпуска"),
+     *          )
+     *     ),
+     *     @OA\Response(
+     *          response="200",
+     *          description="Группа отредактирована",
+     *          @OA\JsonContent(ref="#/components/schemas/SuccessRespone")
+     *     ),
+     *     @OA\Response(
+     *          response="422",
+     *          description="Валидация не пройдена",
+     *          @OA\JsonContent(
+     *              ref="#/components/schemas/ErrorResponse",
+    )
+     *     )
+     * )
+     */
     public function editGroup (GroupFormRequest $req): JsonResponse
     {
         $request = $req->validated();
-
-        if (!$this->isValidYears($request)) {
-            return $this->sendError('Ошибка валидации', 'Проверьте правильность заполнения полей', $this->val->errors(), 422);
-        }
 
         $group = Group::find($request['id']);
 
@@ -61,19 +142,5 @@ class GroupController extends Controller
         $group->save();
 
         return $this->sendResp('Успешно', 'Группа была успешно отредактирована', 200);
-    }
-
-    private function isValidYears(array $request): bool
-    {
-        $this->val = Validator::make($request, [
-            'start_year' => 'integer',
-            'end_year' => 'integer'
-        ]);
-
-        if ($this->val->fails()) {
-            return false;
-        }
-
-        return true;
     }
 }
